[workspace]
members = ["contower", "consensus", "execution", "relay"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
tokio = { version = "1.34.0", features = ["full"] }
slog = { version = "2.7.0", features = ["max_level_trace"] }
sloggers = { version = "2.1.2", features = ["json"] }
slog-term = "2.9.0"
slog-async = "2.8.0"
dotenv = "0.15.0"
eyre = "0.6.8"
clap = "4.5.0"
futures = { version = "0.3.29" }
exit-future = "0.2.0"
lazy_static = "1.4.0"
prometheus = "0.13.3"
target_info = "0.1.0"
git-version = "0.3.5"

# Local dependencies

# Execution
execution = { path = "./execution" }

# Consensus
consensus = { path = "./consensus" }

# Relay
relay = { path = "./relay" }

# Contower
contower = { path = "./contower" }

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false
