[package]
name = "contower"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
target_info = { workspace = true }
git-version = { workspace = true }
tokio = { workspace = true }
dotenv = { workspace = true }
slog = { workspace = true }
eyre = { workspace = true }
sloggers = { workspace = true }
slog-async = { workspace = true }
slog-term = { workspace = true }
futures = { workspace = true }
exit-future = { workspace = true }
lazy_static = { workspace = true }
clap = { workspace = true }
execution = { workspace = true }
consensus = { workspace = true }
