[package]
name = "networking"
version = "0.1.0"
edition = "2021"

[dependencies]

eyre = "0.6.5"
libp2p = { version = "0.51.3", features = ["secp256k1", "ed25519", "tcp", "dns", "async-std", "noise", "mplex", "yamux", "websocket", "ping", "macros", "kad", "mdns", "macros", "tokio", "websocket", "gossipsub", "autonat", "floodsub", "identify", "quic"] }
discv5 = { version = "0.3.0", features = ["libp2p"] }
reqwest = "0.11.18"
serde_json = "1.0.103"
slog = { version = "2.5.2", features = ["max_level_trace"] }
sloggers = { version = "2.1.1", features = ["json"] }
slog-term = "2.9.0"
slog-async = "2.7.0"
futures = "0.3.28"
tokio = "1.29.1"
void = "1.0.2"
ethereum_ssz = "0.5.3"
ethereum_ssz_derive = "0.5.3"
lru = "0.11.0"
get_if_addrs = "0.5.3"
clap = "2.33.3"
tiny-keccak = "2.0.2"