[package]
name = "project_types"
version = "0.1.0"
edition = "2021"

[dependencies]
ethereum-types = "0.14.1"
parking_lot = "0.12.1"
tree_hash = { version = "0.5.2", features = ["arbitrary"] }
tree_hash_derive = "0.5.2"
serde_derive = "1.0.188"
serde = { version = "1.0.188", features = ["derive"] }
ethereum_serde_utils = "0.5.1"
ethereum_ssz = "0.5.3"
ethereum_ssz_derive = "0.5.3"
bytes = "1.5.0"
arbitrary = { version = "1.3.0", features = ["derive"] }
derivative = "2.2.0"
