[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
discv5 = { version = "0.3.1", features = ["libp2p"] }
tokio-util = { version = "0.7.9", features = ["compat"] }
tokio-io-timeout = "1.2.0"
snap = "1.1.0"
strum = "0.25.0"
git-version = "0.3.5"
target_info = "0.1.0"
superstruct = "0.7.0"
prometheus = "0.13.3"
strum_macros = "0.25.3"
ethereum-types = "0.14.1"
parking_lot = "0.12.1"
tree_hash = { version = "0.5.2", features = ["arbitrary"] }
tree_hash_derive = "0.5.2"
serde_derive = "1.0.188"
serde = { version = "1.0.188", features = ["derive"] }
ethereum_serde_utils = "0.5.1"
ethereum_ssz = "0.5.3"
ethereum_ssz_derive = "0.5.3"
bytes = "1.5.0"
arbitrary = { version = "1.3.0", features = ["derive"] }
derivative = "2.2.0"
ssz_types = "0.5.4"
reqwest = "0.11.22"
tiny-keccak = "2.0.2"
serde_json = "1.0.107"
regex = "1.9.6"
hex = "0.4.3"
exit-future = "0.2.0"
futures = "0.3.28"
sha2 = "0.10.8"
tokio = { version = "1.12.0", features = ["full"] }
slog = "2.7.0"
hyper = "0.14.27"
lazy_static = "1.4.0"
libp2p-quic= { version = "0.9.2", features=["tokio"]}
libp2p-mplex = "0.40.0"

[dependencies.libp2p]
version = "0.52.4"
default-features = false
features = ["identify", "yamux", "noise", "gossipsub", "dns", "tcp", "tokio", "plaintext", "secp256k1", "macros", "ecdsa", "serde", "quic", "tls", "relay", "websocket"]

[features]
libp2p-websocket = []