[package]
name = "task_executor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
slog = { workspace = true }
futures = { workspace = true }
exit-future = { workspace = true }
lazy_static = { workspace = true }
sloggers = { workspace = true }
metrics = { path = "../metrics" }
